table_3/results/Nameless_pre_nullness_wpi.txt
../dataset/nameless_pre/src/com/namelessmc/java_api/FilteredUserListBuilder.java:32: error: (argument) $$ 4 $$ arg1 $$ Map.put $$ T extends @Initialized @Nullable Object $$ @Initialized @NonNull Object $$ ( 789, 794 ) $$ incompatible argument for parameter arg1 of Map.put.
		filters.put(filter, value);
		                    ^
  found   : T extends @Initialized @Nullable Object
  required: @Initialized @NonNull Object
../dataset/nameless_pre/src/com/namelessmc/java_api/integrations/DetailedDiscordIntegrationData.java:12: error: (method.invocation) $$ 3 $$ getIdentifier() $$ @UnderInitialization(com.namelessmc.java_api.integrations.DetailedDiscordIntegrationData.class) @NonNull IntegrationData $$ @Initialized @NonNull IntegrationData $$ ( 375, 395 ) $$ call to getIdentifier() not allowed on the given receiver.
		this.idLong = Integer.parseInt(this.getIdentifier());
		                                                 ^
  found   : @UnderInitialization(com.namelessmc.java_api.integrations.DetailedDiscordIntegrationData.class) @NonNull IntegrationData
  required: @Initialized @NonNull IntegrationData
../dataset/nameless_pre/src/com/namelessmc/java_api/integrations/DetailedMinecraftIntegrationData.java:15: error: (method.invocation) $$ 3 $$ getIdentifier() $$ @UnderInitialization(com.namelessmc.java_api.integrations.DetailedIntegrationData.class) @NonNull IntegrationData $$ @Initialized @NonNull IntegrationData $$ ( 463, 483 ) $$ call to getIdentifier() not allowed on the given receiver.
		this.uuid = NamelessAPI.websiteUuidToJavaUuid(this.getIdentifier());
		                                                                ^
  found   : @UnderInitialization(com.namelessmc.java_api.integrations.DetailedIntegrationData.class) @NonNull IntegrationData
  required: @Initialized @NonNull IntegrationData
3
